--- a/python/static/index.html
+++ b/python/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Hello jQuery</title>
+        <title>Strava Segment Power Optimization</title>
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/0.7.2/chroma.min.js"></script>
