--- a/python/static/index.html
+++ b/python/static/index.html
@@ -5,6 +5,10 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/0.7.2/chroma.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/roundSlider/1.6.1/roundslider.min.js"></script>
+
+        <link href="//cdn.jsdelivr.net/npm/round-slider/dist/roundslider.min.css" rel="stylesheet" />
+        
         <script src="app.js"></script>
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
         
@@ -26,15 +30,29 @@
               <input type="range" class="custom-range" min="1" max="6" step="0.1" default="3" id="pen">
               <div class="form-group form-check">
                 <input type="checkbox" class="form-check-input" id="correctalt">
-                <label class="form-check-label" for="exampleCheck1">Correct altitude (only available in France, uses IGN data)</label>
+                <label class="form-check-label" for="correctalt">Correct altitude (only available in France, uses IGN data)</label>
+              </div>
+              <div class="form-group form-check">
+                <input type="checkbox" class="form-check-input" id="snaptoroads">
+                <label class="form-check-label" for="snaptoroads">Snap to roads (uses Google API)</label>
               </div>
               <button class="btn btn-primary" id="submit_profile">View profile</button>
             </form>
-            <div class="container m-5" style="height:200px" id="profileresult">
+            <div class="container">
+            <h2 class="container m-5" id="profilename">
+            </h2>
+            <div class="row">
+                <div class="col" style="height:200px" id="profileresult">
+                </div>
+                <div class="col" style="height:200px" id="profilemap">
+                </div>
+              </div>
             </div>
+            <h2 class="container m-5" id="profilename">
+            </h2>
             <form id ="powerform">
               <div class="form-group row">
-                <label for="mass" class="col-sm-4 col-form-label">Total mass (rider + bike + ...)</label>
+                <label for="mass" class="col-sm-4 col-form-label">Total mass (rider + bike + ...) in kg</label>
                 <div class="col-sm-8">
                   <input type="number" class="form-control" id="mass" value="75">
                 </div>
@@ -46,7 +64,7 @@
                 </div>
               </div>
               <div class="form-group row">
-                <label for="staticEmail" class="col-sm-4 col-form-label">Air drag coefficient (Cda)</label>
+                <label for="staticEmail" class="col-sm-4 col-form-label">Air drag coefficient (Cda) in m²</label>
                 <div class="col-sm-8">
                   <input type="number" class="form-control" id="cda" value="0.3" step="0.01">
                 </div>
@@ -58,9 +76,16 @@
                 </div>
               </div>
               <div class="form-group row">
-                <label for="staticEmail" class="col-sm-4 col-form-label large">Target normalized power in W (NP)</label>
+                <label for="staticEmail" class="col-sm-4 col-form-label large">Target normalized power in W</label>
                 <div class="col-sm-8">
                   <input type="number" class="form-control" id="power">
+                </div>
+              </div>
+              <div class="form-group row">
+                <label for="staticEmail" class="col-sm-4 col-form-label large">Wind direction and speed in km/h</label>
+                  <div class="col-sm-4" id="windslider"></div>
+                <div class="col-sm-4">
+                  <input type="number" class="form-control" id="windspeed" value="0.0">
                 </div>
               </div>
               <button class="btn btn-primary" id="submit_button">Submit</button>
