--- a/python/static/index.html
+++ b/python/static/index.html
@@ -1,97 +1,132 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Strava Segment Power Optimization</title>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/0.7.2/chroma.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/roundSlider/1.6.1/roundslider.min.js"></script>
 
-        <link href="//cdn.jsdelivr.net/npm/round-slider/dist/roundslider.min.css" rel="stylesheet" />
-        
-        <script src="app.js"></script>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-        
-    </head>
+<head>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <title>Strava Segment Power Optimization</title>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"
+    integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+    crossorigin="anonymous"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/flot/0.8.3/jquery.flot.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/chroma-js/0.7.2/chroma.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/roundSlider/1.6.1/roundslider.min.js"></script>
 
-    <body>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light">
-            <a class="navbar-brand" id ="name"></a>
-        </nav>
-        <div class="container">
-        <h1> Optimal power </h1>
-            <form id ="profileform">
-              <div class="form-group">
-                <label for="exampleInputEmail1">Segment ID</label>
-                <input type="text" class="form-control" id="segmentid" aria-describedby="idhelp">
-                <small id="idhelp" class="form-text text-muted">The segment ID is the number at the end of the adress when you are on a segment detail page (e.g https://www.strava.com/segments/18593287 -> ID = 18593287)</small>
-              </div>
-              <label for="range">Profile regularization (more means less intervals)</label>
-              <input type="range" class="custom-range" min="1" max="6" step="0.1" default="3" id="pen">
-              <div class="form-group form-check">
-                <input type="checkbox" class="form-check-input" id="correctalt">
-                <label class="form-check-label" for="correctalt">Correct altitude (only available in France, uses IGN data)</label>
-              </div>
-              <div class="form-group form-check">
-                <input type="checkbox" class="form-check-input" id="snaptoroads">
-                <label class="form-check-label" for="snaptoroads">Snap to roads (uses Google API)</label>
-              </div>
-              <button class="btn btn-primary" id="submit_profile">View profile</button>
-            </form>
-            <div class="container">
-            <h2 class="container m-5" id="profilename">
-            </h2>
-            <div class="row">
-                <div class="col" style="height:200px" id="profileresult">
-                </div>
-                <div class="col" style="height:200px" id="profilemap">
-                </div>
-              </div>
-            </div>
-            <h2 class="container m-5" id="profilename">
-            </h2>
-            <form id ="powerform">
-              <div class="form-group row">
-                <label for="mass" class="col-sm-4 col-form-label">Total mass (rider + bike + ...) in kg</label>
-                <div class="col-sm-8">
-                  <input type="number" class="form-control" id="mass" value="75">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="efficiency" class="col-sm-4 col-form-label">Drivetrain efficiency (0.95-0.98)</label>
-                <div class="col-sm-8">
-                  <input type="number" class="form-control" id="efficiency" value="0.98">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="staticEmail" class="col-sm-4 col-form-label">Air drag coefficient (Cda) in m²</label>
-                <div class="col-sm-8">
-                  <input type="number" class="form-control" id="cda" value="0.3" step="0.01">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="staticEmail" class="col-sm-4 col-form-label">Rolling resistance coefficient (Cr)</label>
-                <div class="col-sm-8">
-                  <input type="number" class="form-control" id="cr" value="0.003">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="staticEmail" class="col-sm-4 col-form-label large">Target normalized power in W</label>
-                <div class="col-sm-8">
-                  <input type="number" class="form-control" id="power">
-                </div>
-              </div>
-              <div class="form-group row">
-                <label for="staticEmail" class="col-sm-4 col-form-label large">Wind direction and speed in km/h</label>
-                  <div class="col-sm-4" id="windslider"></div>
-                <div class="col-sm-4">
-                  <input type="number" class="form-control" id="windspeed" value="0.0">
-                </div>
-              </div>
-              <button class="btn btn-primary" id="submit_button">Submit</button>
-            </form>
-            <div class="container m-5" id="powerresult">
-            </div>
+  <link href="//cdn.jsdelivr.net/npm/round-slider/dist/roundslider.min.css" rel="stylesheet">
+
+  <script src="index.js"></script>
+  <script src="auth.js"></script>
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+
+</head>
+
+<body>
+  <nav class="navbar navbar-expand-sm bg-light navbar-light">
+    <!-- Links -->
+    <ul class="navbar-nav">
+
+      <li class="nav-item active">
+        <a class="nav-link" href="">Power optimization</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link" href="parameters.html">Parameters estimation</a>
+      </li>
+    </ul>
+  </nav>
+  <div class="container" id="auth">
+
+  </div>
+  <div class="container" id="main">
+    <h1> Optimal power </h1>
+    <form id="profileform">
+      <div class="form-group">
+        <label for="exampleInputEmail1">Segment ID</label>
+        <input type="text" class="form-control" id="segmentid" aria-describedby="idhelp" required>
+        <small id="idhelp" class="form-text text-muted">The segment ID is the number at the end of the adress when you
+          are on a segment detail page (e.g https://www.strava.com/segments/18593287 -&gt; ID = 18593287)</small>
+      </div>
+      <label for="range">Profile regularization (more means less intervals)</label>
+      <input type="range" class="custom-range" min="0.1" max="10" step="0.1" default="3" id="pen" required>
+      <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" id="correctalt">
+        <label class="form-check-label" for="correctalt">Correct altitude (only available in France, uses IGN
+          data)</label>
+      </div>
+      <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" id="snaptoroads">
+        <label class="form-check-label" for="snaptoroads">Snap to roads (uses Google API)</label>
+      </div>
+      <button class="btn btn-primary" id="submit_profile">View profile</button>
+    </form>
+    <div class="container">
+      <h2 class="container m-5" id="profilename">
+      </h2>
+      <div class="row">
+        <div class="col" style="height:200px" id="profileresult">
         </div>
-    </body>
+        <div class="col" style="height:200px" id="profilemap">
+        </div>
+      </div>
+    </div>
+    <h2 class="container m-5">
+    </h2>
+    <form id="powerform">
+      <div class="form-group row">
+        <label for="mass" class="col-sm-4 col-form-label">Total mass (rider + bike + ...) in kg</label>
+        <div class="col-sm-8">
+          <input type="number" class="form-control" id="mass" value="75" step="0.1" required>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="efficiency" class="col-sm-4 col-form-label">Drivetrain efficiency (0.95-0.98)</label>
+        <div class="col-sm-8">
+          <input type="number" class="form-control" id="efficiency" value="0.98" required>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="staticEmail" class="col-sm-4 col-form-label">Air drag coefficient (Cda) in m&Acirc;&sup2;</label>
+        <div class="col-sm-8">
+          <input type="number" class="form-control" id="cda" value="0.3" step="0.01" required>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="staticEmail" class="col-sm-4 col-form-label">Rolling resistance coefficient (Cr)</label>
+        <div class="col-sm-8">
+          <input type="number" class="form-control" id="cr" value="0.003" step="0.0001" required>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="temp" class="col-sm-4 col-form-label large">Temperature (°C)</label>
+        <div class="col-sm-8">
+          <input type="number" class="form-control" id="temp" value="20" required>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="staticEmail" class="col-sm-4 col-form-label large">Wind direction and speed in km/h</label>
+        <div class="col-sm-4" id="windslider"></div>
+        <div class="col-sm-4">
+          <input type="number" class="form-control" id="windspeed" value="0.0" step="0.1" required>
+        </div>
+      </div>
+      <div class="form-group row">
+        <label for="power" class="col-sm-4 col-form-label-lg">Target normalized power in W</label>
+        <div class="col-sm-8">
+          <input type="number" class="form-control-lg" id="power" required>
+        </div>
+      </div>
+      <div class="form-group form-check">
+        <input type="checkbox" class="form-check-input" id="constant_power">
+        <label class="form-check-label" for="constant_power">Constant power (do not optimize)</label>
+      </div>
+      <button class="btn btn-primary" id="submit_button">Compute optimal power</button>
+    </form>
+    <div class="container m-5" id="powerresult">
+    </div>
+  </div>
+</body>
+
 </html>
