--- a/python/static/index.html
+++ b/python/static/index.html
@@ -60,8 +60,8 @@
       </select>
     </div>
    
-      <label for="range">Profile regularization (more means less intervals)</label>
-      <input type="range" class="custom-range" min="0.1" max="10" step="0.1" default="3" id="pen" required>
+      <label for="range">Number of subdivisions</label>
+      <input type="range" class="custom-range" min="1" max="20" step="1" default="3" id="pen" required>
       <div class="form-group form-check">
         <input type="checkbox" class="form-check-input" id="correctalt">
         <label class="form-check-label" for="correctalt">Correct altitude (only available in France, uses IGN
@@ -124,13 +124,13 @@
         </div>
       </div>
       <div class="form-group row">
-        <label id="label_power" for="power" class="col-sm-4 col-form-label-lg">Target power in W</label>
+        <label id="label_power" for="power" class="col-sm-4 col-form-label-lg">FTP in W</label>
         <div class="col-sm-8">
           <input type="number" class="form-control-lg" id="power" required>
         </div>
       </div>
       <div class="form-group row">
-        <label id="label_power" for="wp0" class="col-sm-4">W' (a.k.a. Anaerobic Power Reserve, in kJ, only for W'bal model)</label>
+        <label id="label_power" for="wp0" class="col-sm-4">Anaerobic Power Reserve, in kJ</label>
         <div class="col-sm-8">
           <input type="number" class="form-control-lg" id="wp0" value="20.0" step="0.1" required>
         </div>
